<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ucn.afta.cl.rankeducn.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ranked_ucn"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="99dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:text=""
            tools:ignore="MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="176dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/ingresar" />

        <TextView
            android:id="@+id/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/registrar"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
